# dify_service

./: .env.example  .gitignore  README.md  pyproject.toml
src/dify_service/: server.py
